--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
-    "aws-amplify": "^6.6.6",
-    "next": "14.2.10",
-    "react": "^18",
-    "react-dom": "^18",
     "@radix-ui/react-slot": "^1.0.2",
+    "aws-amplify": "^6.6.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.263.1",
+    "next": "^14.2.22",
+    "react": "^18",
+    "react-dom": "^18",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -27,13 +27,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
     "aws-cdk": "^2",
     "aws-cdk-lib": "^2",
     "constructs": "^10.3.0",
     "esbuild": "^0.23.1",
+    "postcss": "^8",
     "tsx": "^4.19.0",
-    "typescript": "^5.6.2",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8"
+    "typescript": "^5.6.2"
   }
 }
